# prandom

./: CMakeLists.txt  README.md  prandom.hpp
benchmark/: CMakeLists.txt  baseline.cpp  critical.cpp  openmp-incorrect.cpp  openmp.cpp  openmp1.cpp  parallel0.cpp  parallel2.cpp  parallel3.cpp  parallel_64.cpp
example/: CMakeLists.txt  hybrid.cpp  mpi.cpp  openmp.cpp
