set(PROGS baseline openmp-incorrect openmp-critical openmp0 openmp1 openmp2 openmp3 openmp openmp_64)
foreach(name ${PROGS})
  set(target "benchmark_${name}")
  add_executable(${target} ${name}.cpp)
  set_target_properties(${target} PROPERTIES OUTPUT_NAME ${name})
  target_link_libraries(${target} PUBLIC OpenMP::OpenMP_CXX)
endforeach(name)
